--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arabic Pronounciation Tutor</title>
+    <title>Arabic Pronounciation Trainer</title>
     <meta name="description" content="Practice reading and pronouncing arabic letters and words with Spaced Repetition ">
   </head>
   <body>
